################################################################################
#-------------------------------------------------------------------------------
# Fix headers for QTCreator.
#-------------------------------------------------------------------------------
file(GLOB HEADERS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "*.h")
add_custom_target(headersInclude SOURCES ${HEADERS})

#-------------------------------------------------------------------------------
# Directories.
#-------------------------------------------------------------------------------
add_subdirectory(reader)
################################################################################
