################################################################################
#-------------------------------------------------------------------------------
# Setup.
#-------------------------------------------------------------------------------
set(MODULE "reader")

#-------------------------------------------------------------------------------
# Source files.
#-------------------------------------------------------------------------------
file(GLOB SOURCES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "*.cpp")

#-------------------------------------------------------------------------------
# Libraries.
#-------------------------------------------------------------------------------
add_library(${MODULE} ${SOURCES})
################################################################################
